--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/chocolate-project/",
+    "build": "vite build --base=/simply-chocolate/",
     "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^4.0.0",
     "glob": "^8.1.0"
   },
-  "author": "Valerii Gurnak",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.0.5",
