--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0",
     "modern-normalize": "^3.0.1",
     "swiper": "^11.2.10",
     "vite-plugin-full-reload": "^1.0.5",
